fixed layout spacing issues

--- a/src/Components/Layout/Layout.scss
+++ b/src/Components/Layout/Layout.scss
@@ -6,3 +6,8 @@
   height: 100vh;
   background-color: #e6e6e6;
 }
+
+.card {
+  height: 100%;
+  border-radius: 0.8rem;
+}
